--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,8 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 28
+    compileSdkVersion 28 
+    buildToolsVersion "27.0.3"
     defaultConfig {
         applicationId "ch.epfl.sweng.bootcamp"
         minSdkVersion 15
